# cuda_test

./: cuda_test
cuda_src/: sayhello.cu  sayhello.cuh
cuda_test/: CMakeLists.txt
cuda_test/cuda_src/: malloctest.cu  malloctest.cuh  streamtest.cu  streamtest.cuh
src/: main.cpp
